--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
+        <title>Asia BDAY</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <p>Serdecznie zapraszam na moje urodziny.</p>
+        <p>Pozdrawiam,</p>
+        <p>Joanna Stefańska</p>
     </body>
 </html>
