--- a/index.html
+++ b/index.html
@@ -1,11 +1,145 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <html>
-    <head>
-        <title>Asia BDAY</title>
-    </head>
-    <body>
-        <p>Serdecznie zapraszam na moje urodziny.</p>
-        <p>Pozdrawiam,</p>
-        <p>Joanna Stefańska</p>
-    </body>
+	<head>
+		<title>BDAY</title>
+    <!-- Tags -->
+		<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Style -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+      <div class="container" id="invitation">
+        <div class="glitch" data-text="PARTY INVITATION">PARTY INVITATION </div>
+        <div class="glow">PARTY INVITATION</div>
+      </div>
+
+
+      <div class="contents">
+
+
+        <div class="photo_text container" id="time_date">
+          <div class="row no-gutters">
+            <div class="col photo">
+              <img src="img/StarTrekPink.jpg" alt="" />
+            </div>
+            <div class="col text">
+							<p>
+							Zapraszam na moje sweet 24te urodziny! <br>
+							Motyw przewodni to “Barbie w 2000 roku”. Spodziewajcie się kuli dyskotekowej, duuuuużo różu, słodyczy i hitów Britney Spears. Żeby łatwiej było Wam wejść w nastrój przygotowaliśmy z Adą i Mikim to zaproszenie :* . <br>
+							Data: 11.07 (sobota) o 20:00 <br>
+							Miejsce: Stańczyka 4/5 Warszawa <br>
+							Klasycznie proszę o przyniesienie alkoholu i czegoś do jedzenia - punkty za różowe jedzenie i przekąski z 2000 jak Cheetos.
+							Asia, Ada i Miki
+							</p>
+
+						</div>
+
+          </div>
+
+
+        </div>
+
+				<div class="container" id="timer">
+				  <h1>Countdown to my birthday:</h1>
+				  <ul>
+				    <li><span id="days"></span>days</li>
+				    <li><span id="hours"></span>Hours</li>
+				    <li><span id="minutes"></span>Minutes</li>
+				    <li><span id="seconds"></span>Seconds</li>
+				  </ul>
+				</div>
+
+        <div class="gallery container" id="dresscode ">
+          <h1>DRESSCODE</h1>
+
+          <div class="gallery_image container">
+            <div class="row no-gutters">
+              <div class="col">
+                <img src="img/DC 1.png" alt="" />
+
+              </div>
+              <div class="col">
+                <img src="img/DC 2.png" alt="" />
+
+              </div>
+              <div class="col">
+                <img src="img/DC 3.png" alt="" />
+
+              </div>
+
+            </div>
+            <div class="row no-gutters">
+              <div class="col">
+                <img src="img/DC 4.png" alt="" />
+
+              </div>
+              <div class="col">
+                <img src="img/DC 5.png" alt="" />
+
+              </div>
+              <div class="col">
+                <img src="img/DC 6.png" alt="" />
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+
+
+        <div id="food" class="photo_text container">
+          <h1>FOOD</h1>
+          <div class="row no-gutters">
+            <div class="col photo">
+              <img src="img/food_gray.png" alt="" />
+            </div>
+            <div class="col text">
+							<p>
+              \Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+						</div>
+
+          </div>
+
+
+        </div>
+
+        <div class="gallery  container" id="vibe">
+          <h1>VIBE</h1>
+          <div class="row">
+            <div class="col">
+
+
+
+
+              <div class="top_text">
+                \Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="col">
+
+
+              <div class="gallery_image">
+                <img src="img/food_gray.png" alt="" />
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+<!-- Java Script -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	</body>
 </html>
