--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
         <div class="photo_text container" id="time_date">
           <div class="row no-gutters">
-            <div class="col photo">
+            <div class="col-sm photo">
               <img src="img/StarTrekPink.jpg" alt="" />
             </div>
-            <div class="col text">
+            <div class="col-sm text">
 							<p>
 							Zapraszam na moje sweet 24te urodziny! <br>
 							Motyw przewodni to “Barbie w 2000 roku”. Spodziewajcie się kuli dyskotekowej, duuuuużo różu, słodyczy i hitów Britney Spears. Żeby łatwiej było Wam wejść w nastrój przygotowaliśmy z Adą i Mikim to zaproszenie :* . <br>
 							Data: 11.07 (sobota) o 20:00 <br>
 							Miejsce: Stańczyka 4/5 Warszawa <br>
-							Klasycznie proszę o przyniesienie alkoholu i czegoś do jedzenia - punkty za różowe jedzenie i przekąski z 2000 jak Cheetos.
+							Klasycznie proszę o przyniesienie alkoholu i czegoś do jedzenia - punkty za różowe jedzenie i przekąski z 2000 jak Cheetos. <br>
 							Asia, Ada i Miki
 							</p>
 
@@ -44,12 +44,12 @@
         </div>
 
 				<div class="container" id="timer">
-				  <h1>Countdown to my birthday:</h1>
+				  <h1>Odliczanie do mojej imprezy urodzinowej:</h1>
 				  <ul>
-				    <li><span id="days"></span>days</li>
-				    <li><span id="hours"></span>Hours</li>
-				    <li><span id="minutes"></span>Minutes</li>
-				    <li><span id="seconds"></span>Seconds</li>
+				    <li><span id="days"></span>Dni</li>
+				    <li><span id="hours"></span>Godziny</li>
+				    <li><span id="minutes"></span>Minuty</li>
+				    <li><span id="seconds"></span>Sekundy</li>
 				  </ul>
 				</div>
 
@@ -58,30 +58,30 @@
 
           <div class="gallery_image container">
             <div class="row no-gutters">
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 1.png" alt="" />
 
               </div>
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 2.png" alt="" />
 
               </div>
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 3.png" alt="" />
 
               </div>
 
             </div>
             <div class="row no-gutters">
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 4.png" alt="" />
 
               </div>
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 5.png" alt="" />
 
               </div>
-              <div class="col">
+              <div class="col-sm">
                 <img src="img/DC 6.png" alt="" />
 
               </div>
@@ -90,24 +90,45 @@
           </div>
         </div>
 
-
-
-        <div id="food" class="photo_text container">
+				<div class="gallery container" id="food">
           <h1>FOOD</h1>
-          <div class="row no-gutters">
-            <div class="col photo">
-              <img src="img/food_gray.png" alt="" />
+
+          <div class="gallery_image container">
+            <div class="row no-gutters">
+              <div class="col-sm">
+                <img src="img/FOOD 1.png" alt="" />
+
+              </div>
+              <div class="col-sm">
+                <img src="img/FOOD 2.png" alt="" />
+
+              </div>
+              <div class="col-sm">
+                <img src="img/FOOD 3.png" alt="" />
+
+              </div>
+
             </div>
-            <div class="col text">
-							<p>
-              \Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
+            <div class="row no-gutters">
+              <div class="col-sm">
+                <img src="img/FOOD 4.png" alt="" />
 
+              </div>
+              <div class="col-sm">
+                <img src="img/FOOD 5.png" alt="" />
+
+              </div>
+              <div class="col-sm">
+                <img src="img/FOOD 6.png" alt="" />
+
+              </div>
+
+            </div>
           </div>
-
-
         </div>
+
+
+
 
         <div class="gallery  container" id="vibe">
           <h1>VIBE</h1>
@@ -140,6 +161,6 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+			<script src="timer.js"></script>
 	</body>
 </html>
