--- a/index.html
+++ b/index.html
@@ -23,21 +23,28 @@
 
         <div class="photo_text container" id="time_date">
           <div class="row no-gutters">
-            <div class="col-sm photo">
-              <img src="img/StarTrekPink.jpg" alt="" />
+            <div class="col-sm-2">
             </div>
-            <div class="col-sm text">
+            <div class="col-sm-8 text">
 							<p>
-							Zapraszam na moje sweet 24te urodziny! <br>
-							Motyw przewodni to “Barbie w 2000 roku”. Spodziewajcie się kuli dyskotekowej, duuuuużo różu, słodyczy i hitów Britney Spears. Żeby łatwiej było Wam wejść w nastrój przygotowaliśmy z Adą i Mikim to zaproszenie :* . <br>
-							Data: 11.07 (sobota) o 20:00 <br>
-							Miejsce: Stańczyka 4/5 Warszawa <br>
-							Klasycznie proszę o przyniesienie alkoholu i czegoś do jedzenia - punkty za różowe jedzenie i przekąski z 2000 jak Cheetos. <br>
-							Asia, Ada i Miki
+								Hejka friends ;**! Zapraszam do nas na kwadrat na moje SWEET 24 B-DAY!
+								<br><br>
+
+								Motyw przewodni to słodkie jak żelki i różowe jak Barbie lata 2000s!!! Tak więc spodziewajcie się kuli dyskotekowej, huby buby i hitów Britney Spears. Żeby łatwiej było Wam wejść w nastrój przygotowaliśmy z Adą i Mikim to zaproszenie :*
+								<br><br>
+								Data: 11.07 (sobota) o 20:00
+								<br>
+								Miejsce: Stańczyka 4/5 Warszawa
+								<br><br>
+
+								Klasycznie proszę o przyniesienie alkoholu i czegoś do jedzenia - punkty za różowe jedzenie i przekąski z 2000 jak Cheetos.
+								<br>
+								Asia, Ada i Miki
 							</p>
 
 						</div>
-
+						<div class="col-sm-2">
+            </div>
           </div>
 
 
@@ -132,17 +139,6 @@
 
         <div class="gallery  container" id="vibe">
           <h1>VIBE</h1>
-          <div class="row">
-            <div class="col">
-
-
-
-
-              <div class="top_text">
-                \Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </div>
-            </div>
-          </div>
           <div class="row">
 
             <div class="col">
