--- a/index.html
+++ b/index.html
@@ -103,30 +103,30 @@
           <div class="gallery_image container">
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/FOOD 1.png" alt="" />
+                <img src="img/Food 1.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/FOOD 2.png" alt="" />
+                <img src="img/Food 2.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/FOOD 3.png" alt="" />
+                <img src="img/Food 3.png" alt="" />
 
               </div>
 
             </div>
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/FOOD 4.png" alt="" />
+                <img src="img/Food 4.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/FOOD 5.png" alt="" />
+                <img src="img/Food 5.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/FOOD 6.png" alt="" />
+                <img src="img/Food 6.png" alt="" />
 
               </div>
 
