--- a/index.html
+++ b/index.html
@@ -66,30 +66,30 @@
           <div class="gallery_image container">
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/DC 1.png" alt="" />
+                <img src="img/DC/DC 3.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/DC 2.png" alt="" />
+                <img src="img/DC/DC 2.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/DC 3.png" alt="" />
+                <img src="img/DC/DC 1.png" alt="" />
 
               </div>
 
             </div>
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/DC 4.png" alt="" />
+                <img src="img/DC/DC 4.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/DC 5.png" alt="" />
+                <img src="img/DC/DC 5.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/DC 6.png" alt="" />
+                <img src="img/DC/DC 6.png" alt="" />
 
               </div>
 
@@ -103,30 +103,30 @@
           <div class="gallery_image container">
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/Food 1.png" alt="" />
+                <img src="img/Food/Food 1.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/Food 2.png" alt="" />
+                <img src="img/Food/Food 2.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/Food 3.png" alt="" />
+                <img src="img/Food/Food 3.png" alt="" />
 
               </div>
 
             </div>
             <div class="row no-gutters">
               <div class="col-sm">
-                <img src="img/Food 4.png" alt="" />
+                <img src="img/Food/Food 4.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/Food 5.png" alt="" />
+                <img src="img/Food/Food 5.png" alt="" />
 
               </div>
               <div class="col-sm">
-                <img src="img/Food 6.png" alt="" />
+                <img src="img/Food/Food 6.png" alt="" />
 
               </div>
 
@@ -139,16 +139,44 @@
 
         <div class="gallery  container" id="vibe">
           <h1>VIBE</h1>
-          <div class="row">
-
-            <div class="col">
-
-
-              <div class="gallery_image">
-                <img src="img/food_gray.png" alt="" />
-              </div>
-            </div>
-          </div>
+					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+					    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img class="d-block w-100" src="img/Vibe/powerpuff.gif" alt="First slide">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="img/Vibe/rainbow_way.gif" alt="Second slide">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="img/Vibe/rainbow.gif" alt="Third slide">
+					    </div>
+							<div class="carousel-item">
+					      <img class="d-block w-100" src="img/Vibe/source.gif" alt="Third slide">
+					    </div>
+							<div class="carousel-item">
+					      <img class="d-block w-100" src="img/Vibe/StarTrekPink.jpg" alt="Third slide">
+					    </div>
+							<div class="carousel-item">
+					      <img class="d-block w-100" src="img/Vibe/tribbles 2.jpg" alt="Third slide">
+					    </div>
+					  </div>
+					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Previous</span>
+					  </a>
+					  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Next</span>
+					  </a>
+					</div>
 
         </div>
       </div>
